# home-sensors

./: README.md
esp32-node-1/: esp32-temp-node.ino
esp32-node-1/esp32-temp-node/: esp32-temp-node.ino
pico-moisture-v1/: CMakeLists.txt  NetworkConf.cmake  measurement_engine.c  measurement_engine.h  network.c  network.h  network_conf.h.in  network_controller.c  network_controller.h  pico-moisture-v1.c  wifi_controller.c  wifi_controller.h
